force-app/main/default/objects/Approval__c/Approval__c.object-meta.xml
<CustomObject>
    <label>Approval</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Approval  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>