force-app/main/default/objects/Approval__c/fields/MPRA_SoW_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>MPRA_SoW_Reference_Number__c</fullName>
    <label>MPRA SoW Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>