force-app/main/default/objects/Approval__c/fields/Original_Approver__c.field-meta.xml
<CustomField>
    <fullName>Original_Approver__c</fullName>
    <label>Original Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>