force-app/main/default/objects/Approval__c/fields/ProcessInstanceId__c.field-meta.xml
<CustomField>
    <fullName>ProcessInstanceId__c</fullName>
    <label>ProcessInstanceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>